Fixing the  scrollbar issue on Windows Electron

--- a/part1/src/styles/global.scss
+++ b/part1/src/styles/global.scss
@@ -10,6 +10,7 @@
 }
 
 body {
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   max-width: 100vw;
   max-height: 100vh;
